fixing overflow

--- a/styles/menu/menu.scss
+++ b/styles/menu/menu.scss
@@ -59,6 +59,11 @@
         }
 
         &__decorations{
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             overflow: hidden;
 
             .image{
